--- a/lab1/src/main/resources/application.properties
+++ b/lab1/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=lab
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+spring.profiles.active=prod
